# coconut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  go.mod  init.el  vcpkg.json
apps/: CMakeLists.txt  orchid.cpp
cmd/: mod.go  web.go
daffodil/: CMakeLists.txt
daffodil/include/coconut/: application.hpp  auth.hpp  env.hpp  orm.hpp  s3.hpp  sms.hpp
daffodil/src/: queue-rabbitmq.cpp  redis.cpp  s3-minio.cpp  send-email.cpp  sms-twilio.cpp
docker/: .gitignore  Dockerfile  build.sh  start.sh
include/coconut/: application.hpp  auth.hpp  crypto.hpp  env.hpp  google.hpp  monitor.hpp  wechat.hpp
metasequoia/v2/: metasequoia.pb.go  metasequoia_grpc.pb.go
orchid/v2/: orchid.pb.go  orchid_grpc.pb.go
protocols/: auth.thrift  crypto.thrift  google_oauth2.thrift  metasequoia.proto  monitor.thrift  orchid.proto  wechat-oauth2.thrift  wechat_mini_program.thrift  wechat_oauth2.thrift
scripts/: build.sh  schema.sh
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/: Aes.h  GoogleOauth2.h  Health.h  Hmac.h  Jwt.h  Log.h  MiniProgram.h  Oauth2.h  Policy.h  User.h  WechatMiniProgram.h  WechatOauth2.h  auth_constants.h  auth_types.h  crypto_types.h  google-oauth2_types.h  google_oauth2_types.h  monitor_types.h  wechat-mini_program_types.h  wechat-oauth2_types.h  wechat_mini_program_types.h  wechat_oauth2_types.h
sdk/cpp/src/: Aes.cpp  GoogleOauth2.cpp  Health.cpp  Hmac.cpp  Jwt.cpp  Log.cpp  MiniProgram.cpp  Oauth2.cpp  Policy.cpp  User.cpp  WechatMiniProgram.cpp  WechatOauth2.cpp  auth_constants.cpp  auth_types.cpp  crypto_types.cpp
sdk/java/: pom.xml
sdk/java/src/main/java/com/github/saturn_xiv/coconut/google/oauth2/v1/: Oauth2.java
sdk/java/src/main/java/com/github/saturn_xiv/coconut/monitor/v1/: Health.java
sdk/java/src/main/java/com/github/saturn_xiv/coconut/v1/: Aes.java  AesEncryptResponse.java  GoogleOauth2.java  Health.java  Hmac.java  Jwt.java  JwtVerfifyResponse.java  Log.java  LogItem.java  LogLevel.java  Permission.java  Policy.java  Resource.java  User.java  UserInfo.java  UserSignInBy.java  UserSignInRequest.java  UserSignInResponse.java  UserSignUpRequest.java  WechatMiniProgram.java  WechatOauth2.java  authConstants.java
sdk/java/src/main/java/com/github/saturn_xiv/coconut/wechat/mini_program/v1/: MiniProgram.java
sdk/java/src/main/java/com/github/saturn_xiv/coconut/wechat/oauth2/v1/: Oauth2.java
src/: application.cpp  crypto.cpp  main.cpp
tests/: cache.cpp  crypto.cpp  email.cpp  ops.cpp  orm.cpp  queue.cpp  rpc.cpp  s3.cpp  theme.cpp  utils.cpp
